<resources>
    <string name="app_name">Projects</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">UNDO</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_discard">Discard</string>
    <string name="action_done">Done</string>
    <string name="action_insert">Insert</string>
    <string name="error_key_invalid">Bad credentials</string>
    <string name="error_no_column_title">Title can\'t be empty</string>
    <string name="error_title_change_failed">Title change failed</string>
    <string name="error_no_issues">There are no open issues which aren\'t already in the project</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_project_not_found">Project not found</string>
    <string name="error_repo_not_found">Repository not found</string>
    <string name="error_no_application_for_picture">No camera</string>
    <string name="error_image_file_not_created">File couldn\'t be created</string>
    <string name="error_readme_not_found">Readme not found</string>
    <string name="error_rendering_readme">Couldn\'t render readme</string>
    <string name="error_readme_not_found_placeholder"><![CDATA[
        # README not found
    ]]></string>
    <string name="error_loading_license">Couldn\'t load license</string>
    <string name="text_forks">Forks</string>
    <string name="text_issues">Issues</string>
    <string name="text_stars">Stars</string>
    <string name="text_size">Size</string>
    <string name="text_watchers">Watchers</string>
    <string name="text_license">License</string>
    <string name="text_show_readme">Show README</string>
    <string name="text_hide_readme">Hide README</string>
    <string name="text_create_project">Create new project</string>
    <string name="text_project_created">Project created successfully</string>
    <string name="text_project_edited">Project edited successfully</string>
    <string name="text_delete_project_warning">Do you want to delete this project?</string>
    <string name="text_no_license">None</string>
    <string name="text_collaborators">Collaborators</string>
    <string name="text_contributors">Contributors</string>
    <string name="text_fab_new_card">New card</string>
    <string name="text_fab_new_column">New column</string>
    <string name="text_fab_new_issue">New issue</string>
    <string name="text_delete_column_warning">Are you sure you want to delete this column?</string>
    <string name="text_delete_note_warning">Are you sure you want to delete this note?</string>
    <string name="text_note_deleted">Note deleted</string>
    <string name="text_close_issue_on_delete">Do you want to close the issue associated with this card?</string>
    <string name="text_delete_project">Delete project</string>
    <string name="text_star">Star</string>
    <string name="text_unstar">Unstar</string>
    <string name="text_watch">Watch</string>
    <string name="text_unwatch">Unwatch</string>
    <string name="text_clear">Clear</string>
    <string name="text_show_files">Show files</string>
    <string name="text_gist_viewholder_title">%1$s/%2$s</string>
    <string name="text_committed_by">%1$s committed on %2$s</string>
    <string name="text_committed_by_hash_at">%1$s committed %2$s on %3$s</string>
    <string name="text_diff_changes">%1$s with %2$s and %3$s</string>
    <string name="text_ci_status">Continuous integration status: %1$s</string>
    <string name="text_ci_info">%1$s \n%2$s</string>
    <plurals name="text_commit_additions">
        <item quantity="one">%d addition</item>
        <item quantity="other">%d additions</item>
    </plurals>
    <plurals name="text_commit_deletions">
        <item quantity="one">%d deletion</item>
        <item quantity="other">%d deletions</item>
    </plurals>
    <string name="text_ribbon_root">/</string>
    <string name="text_take_a_picture">Take a picture</string>
    <string name="text_choose_from_gallery">Choose from gallery</string>
    <string name="text_upload_an_image">Upload an image</string>
    <string name="text_insert_image_link">Insert image link</string>
    <string name="text_comment_created">Comment created</string>
    <string name="text_delete_comment_warning">Are you sure you want to delete this comment?</string>
    <string name="text_comment_edited">Edited</string>
    <string name="text_comment_by">%1$s commented %2$s</string>
    <string name="text_event_closed">Closed by %1$s</string>
    <string name="text_event_closed_in">Closed by %1$s in %2$s</string>
    <string name="text_event_reopened">Reopened by %1$s</string>
    <string name="text_event_subscribed">%1$s subscribed</string>
    <string name="text_event_merged">Merged by %1$s in %2$s</string>
    <string name="text_event_referenced">Referenced in %1$s</string>
    <string name="text_event_referenced_multiple">Referenced in multiple commits %1$s</string>
    <string name="text_event_mentioned">%1$s was mentioned</string>
    <string name="text_event_assigned">%1$s was assigned </string>
    <string name="text_event_assigned_themselves">%1$s self-assigned this</string>
    <string name="text_event_unassigned">%1$s was unassigned</string>
    <string name="text_event_unassigned_themselves">%1$s self-unassigned this</string>
    <string name="text_event_labeled">%1$s added label %2$s</string>
    <string name="text_event_unlabeled">%1$s removed label %2$s</string>
    <string name="text_event_renamed"><![CDATA[%1$s renamed the issue from <b>\"%2$s\"</b> to <b>\"%3$s\"</b>]]></string>
    <string name="text_event_locked">%1$s locked the issue</string>
    <string name="text_event_unlocked">%1$s unlocked the issue</string>
    <string name="text_event_head_ref_deleted">Head ref deleted</string>
    <string name="text_event_head_ref_restored">Head ref restored</string>
    <string name="text_event_review_dismissed">%1$s dismissed a review</string>
    <string name="text_event_review_requested">%1$s requested a review from %2$s</string>
    <string name="text_event_own_review_request">%1$s requested their own review</string>
    <string name="text_event_removed_own_review_request">%1$s removed their review request</string>
    <string name="text_event_review_request_removed">%1$s removed the review request for %2$s</string>
    <string name="text_event_assigned_multiple">Assigned to %1$s</string>
    <string name="text_event_unassigned_multiple">Unassigned from %1$s</string>
    <string name="text_event_review_requested_multiple">%1$s requested reviews form %2$s</string>
    <string name="text_event_review_request_removed_multiple">%1$s removed review requests for %2$s</string>
    <string name="text_event_labels_added">%1$s added labels %2$s</string>
    <string name="text_event_labels_removed">%1$s removed labels %2$s</string>
    <string name="text_event_added_to_project">%1$s added this issue to a project</string>
    <string name="text_event_removed_from_project">%1$s removed this issue from a project</string>
    <string name="text_event_moved_columns_in_project">Moved columns in project</string>
    <string name="text_event_mentioned_multiple">Multiple users were mentioned %1$s</string>
    <string name="text_event_renamed_multiple">Renamed multiple times %1$s</string>
    <string name="text_event_rename_multiple">![CDATA[from <b>\"%1$s\"</b> to <b>\"%2$s\"</b>]></string>
    <string name="text_event_moved_columns_in_project_multiple">Moved columns in project multiple times</string>
    <string name="text_event_milestoned">Added to %1$s milestone by %2$s</string>
    <string name="text_event_demilestoned">Removed from %1$s milestone by %2$s</string>
    <string name="text_notification_comment">Comment on %1$s</string>
    <string name="text_notification_mention">Mentioned on %1$s</string>
    <string name="text_notification_assign">Assigned to %1$s on %2$s</string>
    <string name="text_notification_author">Comment on your thread on %1$s</string>
    <string name="text_notification_invitation">Invitation</string>
    <string name="text_notification_manual">Subscribed to %1$s</string>
    <string name="text_notification_subscribed">Update on %1$s</string>
    <string name="text_notification_issue">Issue on %1$s</string>
    <string name="text_user_activity">Activity</string>
    <string name="text_user_created_at">Created %1$s</string>
    <string name="text_commit">commit %1$s</string>
    <string name="text_user_no_contributions">No contributions</string>
    <plurals name="text_user_contributions">
        <item quantity="zero">No contributions in the last year</item>
        <item quantity="one">%d contribution in the last year</item>
        <item quantity="other">%d contributions in the last year</item>
    </plurals>
    <string name="text_user_average">Average contributions per day: %1$.1f</string>
    <string name="text_user_average_active">Average contributions on active days: %1$.1f</string>
    <string name="text_user_max_contributions">Most contributions in a day: %1$d</string>
    <string name="text_user_streak">Longest streak: %1$d days</string>
    <plurals name="text_user_repositories">
        <item quantity="zero">No repositories</item>
        <item quantity="one">%d repository</item>
        <item quantity="other">%d repositories</item>
    </plurals>
    <plurals name="text_user_gists">
        <item quantity="zero">No gists</item>
        <item quantity="one">%d gist</item>
        <item quantity="other">%d gists</item>
    </plurals>
    <string name="text_repo_forked">Forked from %1$s</string>
    <string name="text_repo_forked_multiple">Forked from %1$s with source of %2$s</string>
    <string name="text_follow_user">Follow</string>
    <string name="text_unfollow_user">Unfollow</string>
    <string name="text_assignee_all">All</string>
    <string name="text_assignee_none">None</string>
    <plurals name="text_issue_comment_count">
        <item quantity="zero">No comments</item>
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="text_loading_contributors">Loading contributors</string>
    <string name="hint_issue_title">Title</string>
    <string name="hint_issue_body">Body</string>
    <string name="hint_card_new">Enter a note</string>
    <string name="hint_choose_assignees">Assignees</string>
    <string name="hint_choose_labels">Labels</string>
    <string name="hint_from_issue">From issue</string>
    <string name="hint_milestone_title">Title</string>
    <string name="hint_milestone_description">Description</string>
    <string name="hint_search_emojis">Search emojis</string>
    <string name="title_activity_emoji">Emojis</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_source">Source</string>
    <string name="menu_share">Share</string>
    <string name="menu_save_to_homescreen">Add shortcut to home</string>
    <string name="menu_copy_comment_text">Copy comment text</string>
    <string name="menu_reactions">Reactions</string>
    <string name="menu_react_plus_one">+1 👍</string>
    <string name="menu_react_minus_one">-1 👎</string>
    <string name="menu_react_laugh">Laugh 😂</string>
    <string name="menu_react_hooray">Hooray 🎉</string>
    <string name="menu_react_confused">Confused 😕</string>
    <string name="menu_react_heart">Heart ❤️</string>
    <string name="menu_search">Search</string>
    <string name="text_zero_value">0</string>
    <string name="text_placeholder">…</string>
    <string name="transition_name" translatable="false">name</string>
    <string name="transition_username" translatable="false">user_name</string>
    <string name="transition_user_image" translatable="false">user_image</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_pin">Pin repository</string>
</resources>