<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"/>

    <item
        android:id="@+id/menu_save_to_homescreen"
        android:title="@string/menu_save_to_homescreen"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/menu_source"
        android:title="@string/menu_source"/>

    <item
        android:id="@+id/menu_action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

</menu>