<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright  2016 Theo Pearson-Bray
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_reactions"
        android:title="@string/menu_reactions">
        <menu>
            <item
                android:id="@+id/menu_plus_one"
                android:title="@string/menu_react_plus_one"/>
            <item
                android:id="@+id/menu_minus_one"
                android:title="@string/menu_react_minus_one"/>
            <item
                android:id="@+id/menu_laugh"
                android:title="@string/menu_react_laugh"/>
            <item
                android:id="@+id/menu_hooray"
                android:title="@string/menu_react_hooray"/>
            <item
                android:id="@+id/menu_confused"
                android:title="@string/menu_react_confused"/>
            <item
                android:id="@+id/menu_heart"
                android:title="@string/menu_react_heart"/>
        </menu>

    </item>


</menu>