<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/user_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="top"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.tpb.projects.common.NetworkImageView
            android:id="@+id/user_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            android:transitionName="@string/transition_user_image"/>

        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_placeholder"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:transitionName="@string/transition_username"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>