<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/card_note_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:hint="@string/hint_card_new"
        app:counterEnabled="true"
        app:counterMaxLength="250">

        <org.sufficientlysecure.htmltext.htmledittext.HtmlEditText
            android:id="@+id/card_note_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLength="250"
            android:imeOptions="actionNone"
            android:scrollHorizontally="false"
            android:gravity="top"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/card_clear_issue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:text="@string/text_clear"
        android:background="?android:attr/selectableItemBackground"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:visibility="gone"/>

    <Button
        android:id="@+id/card_from_issue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:text="@string/hint_from_issue"
        android:background="?android:attr/selectableItemBackground"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:visibility="gone"/>

</LinearLayout>