<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_margin="8dp"
        android:layout_gravity="bottom"
        android:hint="@string/hint_issue_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/issue_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionNone"
            android:scrollHorizontally="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:hint="@string/hint_issue_body">

        <com.tpb.mdtext.views.MarkdownEditText
            android:id="@+id/issue_body_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionNone"
            android:scrollHorizontally="false"
            android:gravity="top"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/issue_information_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/issue_add_assignees_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_choose_assignees"
                android:background="?android:attr/selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <com.tpb.mdtext.views.MarkdownTextView
                android:id="@+id/issue_assignees_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/issue_add_labels_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_choose_labels"
                android:background="?android:attr/selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <com.tpb.mdtext.views.MarkdownTextView
                android:id="@+id/issue_labels_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>