<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_margin="8dp"
        android:layout_gravity="bottom"
        android:hint="@string/hint_milestone_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/milestone_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionNone"
            android:scrollHorizontally="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:hint="@string/hint_milestone_description">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/milestone_description_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine|textCapSentences"
            android:imeOptions="actionNone"
            android:scrollHorizontally="false"
            android:gravity="top"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/milestone_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        android:baselineAligned="false">

        <EditText
            android:id="@+id/milestone_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

        <Button
            android:id="@+id/milestone_clear_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/text_clear"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>