<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_info_refresher"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.androidnetworking.widget.ANImageView
                        android:id="@+id/user_image"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="16dp"
                        android:layout_gravity="center_vertical"
                        android:transitionName="@string/transition_user_image"/>

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_placeholder"
                        android:textAppearance="@android:style/TextAppearance.Material.Title"
                        android:transitionName="@string/transition_username"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/user_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <com.tpb.contributionsview.ContributionsView
            android:id="@+id/user_contributions"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:textSize="12sp"
            app:textColor="@color/colorPrimaryTextInverse"/>

    </LinearLayout>


</android.support.v4.widget.SwipeRefreshLayout>

